# celebit-backend

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
celebit_backend/: asgi.py  settings.py  urls.py  wsgi.py
core/: models.py
users/: admin.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
users/services/: JWTService.py
